--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
                   we offer the best services in the country
                   we have a team of professional photographers and editors who are dedicated to providing
                    you with the best experience possible.
+                   <span  class="photo-3-disc-text">we are here to capture your memories and make them last forever
+                    we offer the best services in the country
+                    we have a team of professional photographers and editors who are dedicated to providing
+                     you with the best experience possible.</span>
                 </p>
              </div>
             <div class="photo-3">
@@ -74,8 +78,48 @@
                 </div>
            </div>
          </section>
-    </main>
 
+         <section class="services-4">
+            <div>
+                 <img src="resource/service.jpg" alt="photo" class="photo-5">
+                 <p class="card-disc">for training</p>
+            </div>
+            <div>
+                 <img src="resource/service2.jpg" alt="photo" class="photo-5">
+                  <p class="card-disc">Our packege</p>
+             </div>
+             <div>
+              <img src="resource/events.jpg" alt="photo" class="photo-5">
+              <p class="card-disc">for events</p>
+             </div>
+             <div>
+                <img src="resource/graduation.jpg" alt="photo" class="photo-5">
+                <p class="card-disc">for graduation</p>
+              </div>
+         </section>
+
+         <section class="services-4">
+          <div>
+               <img src="resource/package.jpg" alt="photo" class="photo-5">
+               <p class="card-disc">for wedding</p>
+          </div>
+          <div>
+               <img src="resource/outdoorshoot.jpg" alt="photo" class="photo-5">
+                <p class="card-disc">Outdoor shoot</p>
+           </div>
+           <div>
+            <img src="resource/family.jpg" alt="photo" class="photo-5">
+            <p class="card-disc">for family </p>
+           </div>
+           <div>
+              <img src="resource/logo.jpg" alt="photo" class="photo-5">
+              <p class="card-disc">for product</p>
+            </div>
+       </section>
+    </main>
+   <footer>
+        
+   </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
