footer has been added

--- a/index.html
+++ b/index.html
@@ -117,9 +117,42 @@
             </div>
        </section>
     </main>
-   <footer>
-        
-   </footer>
+    <footer class="footer">
+      <div class="footer-container">
+          <!-- Contact Information -->
+          <div class="footer-section contact">
+              <h5>Contact Us</h5>
+              <p>
+                  <i class="fas fa-map-marker-alt"></i> 123 Main Street, Anytown, USA<br>
+                  <i class="fas fa-phone"></i> +1 (555) 123-4567<br>
+                  <i class="fas fa-envelope"></i> info@opticalstudio.com
+              </p>
+          </div>
+          <!-- Social Media Links -->
+          <div class="footer-section social">
+            <h5>Follow Us</h5>
+            <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
+        </div>
+         <!-- Quick Links -->
+         <div class="footer-section links">
+          <h5>Quick Links</h5>
+          <ul>
+              <li><a href="#about">Home</a></li>
+              <li><a href="#services">Portfolio</a></li>
+              <li><a href="#contact">About</a></li>
+              <li><a href="#contact">Book</a></li>
+          </ul>
+      </div>
+  </div>
+  <div class="footer-bottom">
+      <p>&copy; 2023 Optical Studio. All rights reserved.</p>
+  </div>
+</footer>
+ <!-- Add Font Awesome for icons -->
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
