--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <h1 class="brand-name">OPTICAL STUDIO</h1>
         <nav class="nav">
           <ul class="nav_list">
-            <li><a href="#about">Home</a></li>
-            <li><a href="#services">Portifolio</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="portifolio.html">Portifolio</a></li>
             <li><a href="#contact">About</a></li>
             <li><a href="#contact">Book</a></li>
           </ul>
@@ -63,19 +63,10 @@
                   we offer the best services in the country
                   we have a team of professional photographers and editors who are dedicated to providing
                    you with the best experience possible.
-                   <span  class="photo-3-disc-text">we are here to capture your memories and make them last forever
-                    we offer the best services in the country
-                    we have a team of professional photographers and editors who are dedicated to providing
-                     you with the best experience possible.</span>
                 </p>
              </div>
             <div class="photo-3">
-                <div>
-                    <img src="resource/fashion2.jpg" alt="photo" class="photo-3-image">
-                </div>
-                <div>
-                    <img src="resource/fashion.jpg" alt="photo" class="photo-4-image">
-                </div>
+                    <img src="resource/fashion2.jpg" alt="photo" class="photo-3-image"> 
            </div>
          </section>
 
